--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "cyberbot-vision",
+  "name": "cyberbot",
   "version": "1.0.0",
+  "description": "",
   "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "telegraf": "^4.12.0",
-    "node-fetch": "^3.3.1",
-    "path": "^0.12.7"
+    "node-fetch": "^3.3.1"
   }
 }
