--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cyberbot-vision",
   "version": "1.0.0",
   "main": "server.js",
- "dependencies": 
+ "dependencies": {
   "express": "^4.18.2",
   "cors": "^2.8.5",
   "telegraf": "^4.12.2",
@@ -10,4 +10,5 @@
 }
   }
 }
+
 
